# SNN_CFO_estimation

./: Preamble.py  Preamble_plot.py  Preamble_shifter.py  README.md  WiSig.py  WiSig2Text.py  adaptation.py  cfo_cnn.py  cfo_cnn2snn.py  cfo_dnn.py  cfo_dnn2snn.py  cfo_rnn.py  complex_plot.py  img_changer.py  noise_record.m  normalizer.py  qam_kmeans.py  scnn_networks.py  stfcfo_estimation.m  wisig.py  wisig2text.py
802.11n_synchronization/: NN_based_sync_ideal_SNR.m  NN_based_sync_real.m  calculateOFDMBER.m  cfo_estimate_2dcnn.py  cfo_estimate_dnn.py  cfo_estimate_lstm.py  cfo_estimate_scnn.py  htNoiseEstimate.m  signal_record.m
802.11n_synchronization/models/: cfo_1dcnn.pt  cfo_2dcnn.pt  (+6 more)
Matlab_files/: apply_rician.m  noise_adder.m  stream_save.m
gr-customs/: CMakeLists.txt  MANIFEST.md
gr-customs/python/customs/bindings/: CMakeLists.txt  ofdm_carrier_preamble_python.cc  python_bindings.cc
gr-customs/python/customs/bindings/docstrings/: ofdm_carrier_preamble_pydoc_template.h
ofdmSynchronization/: SDRImageTransmissionReceptionUsing80211WaveformExample.mlx  cfo_estimate_1dcnn.py  cfo_estimate_2dcnn.py  cfo_estimate_dnn.py  cfo_estimate_lstm.py  cfo_estimate_prontol.py  cfo_estimate_prontos.py  cfo_estimate_scnn.py  helperInterpretLSIG.m  sync_real_pronto.m  sync_real_proposed.m
test/: cfo_1dcnn_test.py  cfo_2dcnn_test.py  cfo_dnn_test.py  cfo_lstm_test.py  cfo_prontol_test.py  cfo_prontos_test.py  cfo_scnn_test.py
train/: cfo_1dcnn_train.py  cfo_2dcnn_train.py  cfo_dnn_train.py  cfo_lstm_train.py  cfo_prontol_train.py  cfo_prontos_train.py  cfo_scnn_train.py
(+34 files in other folders)
